--- a/web/index.html
+++ b/web/index.html
@@ -1,23 +1,149 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Chat</title></head>
-  <body>
-    <h1>Simple AI Chat</h1>
-    <input id="msg" placeholder="Say something..." />
-    <button onclick="send()">Send</button>
-    <pre id="res"></pre>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chat AI Compiler</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+  <style>
+    #responses.grid-layout {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 10px;
+    }
+    #responses.list-layout {
+      display: flex;
+      flex-direction: column;
+    }
+    .response {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      font-size: 12px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1 class="my-4">Chat AI Compiler</h1>
+    <p>Select AI services, type a question, and get responses.</p>
 
-    <script>
-      async function send() {
-        const msg = document.getElementById("msg").value;
-        const res = await fetch("/api/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message: msg })
-        });
-        const data = await res.json();
-        document.getElementById("res").innerText = data.reply;
+    <form id="chatForm" class="mb-4">
+      <div class="form-group">
+        <label>Select AI Services:</label><br/>
+        <input type="checkbox" name="aiServices" value="llama3-8b"> LLaMA 3 (8B)
+        <input type="checkbox" name="aiServices" value="llama3-70b"> LLaMA 3 (70B)
+        <input type="checkbox" name="aiServices" value="gemma2-9b"> Gemma 2 (9B)
+        <input type="checkbox" name="aiServices" value="llama3.1-8b"> LLaMA 3.1 (8B Instant)
+        <input type="checkbox" name="aiServices" value="llama3.3-70b"> LLaMA 3.3 (70B Versatile)
+      </div>
+      <div class="form-group">
+        <label for="msg">Enter your message:</label>
+        <input type="text" id="msg" class="form-control" placeholder="Say something..." />
+      </div>
+      <button type="submit" class="btn btn-primary">Send</button>
+    </form>
+
+    <div id="responseContainer">
+      <div id="toolbar" class="mb-2">
+        <button id="gridView" class="btn btn-secondary">Grid View</button>
+        <button id="listView" class="btn btn-secondary">List View</button>
+        <button id="exportCSV" class="btn btn-secondary">Export to CSV</button>
+      </div>
+      <div id="responses" class="grid-layout"></div>
+    </div>
+  </div>
+
+  <script>
+    const modelEndpointMap = {
+      "llama3-8b": "/api/chat/llama3-8b",
+      "llama3-70b": "/api/chat/llama3-70b",
+      "gemma2-9b": "/api/chat/gemma2-9b",
+      "llama3.1-8b": "/api/chat/llama3.1-8b",
+      "llama3.3-70b": "/api/chat/llama3.3-70b"
+    };
+
+    let currentData = {
+      message: '',
+      responses: []
+    };
+
+    document.getElementById("chatForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const message = document.getElementById("msg").value.trim();
+      const selected = Array.from(document.querySelectorAll("input[name='aiServices']:checked")).map(cb => cb.value);
+
+      if (!message) return alert("Please enter a message.");
+      if (selected.length === 0) return alert("Please select at least one AI service.");
+
+      const responsesDiv = document.getElementById("responses");
+      responsesDiv.innerHTML = "";
+      currentData.message = message;
+      currentData.responses = [];
+
+      const fetches = selected.map(async (service) => {
+        const endpoint = modelEndpointMap[service];
+        try {
+          const res = await fetch(endpoint, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ message })
+          });
+          const data = await res.json();
+          const reply = data.reply || "No reply received.";
+
+          currentData.responses.push({
+            service,
+            response: reply,
+            timestamp: new Date().toISOString()
+          });
+
+          const div = document.createElement("div");
+          div.className = "response";
+          div.innerHTML = `<h5>${service.toUpperCase()}</h5><p>${reply}</p>`;
+          responsesDiv.appendChild(div);
+        } catch (err) {
+          console.error(`Error from ${service}:`, err);
+        }
+      });
+
+      await Promise.all(fetches);
+    });
+
+    document.getElementById("gridView").addEventListener("click", () => {
+      const resDiv = document.getElementById("responses");
+      resDiv.classList.remove("list-layout");
+      resDiv.classList.add("grid-layout");
+    });
+
+    document.getElementById("listView").addEventListener("click", () => {
+      const resDiv = document.getElementById("responses");
+      resDiv.classList.remove("grid-layout");
+      resDiv.classList.add("list-layout");
+    });
+
+    document.getElementById("exportCSV").addEventListener("click", () => {
+      if (!currentData.message || currentData.responses.length === 0) {
+        alert("No data to export.");
+        return;
       }
-    </script>
-  </body>
+
+      let csv = "Message,Service,Response,Timestamp\n";
+      currentData.responses.forEach(({ service, response, timestamp }) => {
+        const row = [currentData.message, service, response.replace(/"/g, '""'), timestamp]
+          .map(val => `"${val}"`).join(",");
+        csv += row + "\n";
+      });
+
+      const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+      const link = document.createElement("a");
+      link.setAttribute("href", URL.createObjectURL(blob));
+      link.setAttribute("download", "responses.csv");
+      link.style.visibility = "hidden";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
+  </script>
+</body>
 </html>
