Add 'Copy to Clipboard' feature for query results

--- a/web/index.html
+++ b/web/index.html
@@ -72,11 +72,36 @@
         <button id="listView" class="btn btn-secondary">List View</button>
         <button id="exportCSV" class="btn btn-secondary">Export to CSV</button>
         <button id="exportTXT" class="btn btn-secondary">Export to TXT</button>
+        <button id="copyToClipboard" class="btn btn-secondary">Copy to Clipboard</button>
       </div>
       <div id="responses" class="grid-layout"></div>
     </div>
   </div>
 
+ <script>
+  window.onload = function () {
+    document.getElementById("copyToClipboard").onclick = () => {
+      if (!currentData.message || !currentData.responses.length) {
+        return alert("No data to copy.");
+      }
+
+      let txt = "";
+
+      currentData.responses.forEach(({ service, response, timestamp }, index) => {
+        txt += `Entry #${index + 1}\n`;
+        txt += `Message:   ${currentData.message}\n`;
+        txt += `Service:   ${service}\n`;
+        txt += `Timestamp: ${timestamp}\n`;
+        txt += `Response:\n${response.replace(/\r?\n/g, '\n')}\n`;
+        txt += `\n----------------------------------------\n\n`;
+      });
+
+      navigator.clipboard.writeText(txt)
+        .then(() => alert("Copied to clipboard!"))
+        .catch(() => alert("Failed to copy to clipboard."));
+    };
+  };
+</script>
   <script>
     const modelEndpointMap = {
       "compound-beta-mini": "/api/chat/compound-beta-mini",
