--- a/web/public/index.html
+++ b/web/public/index.html
@@ -34,24 +34,80 @@
     max-height: 100px; /* Set the desired height for the scrollable area */
     overflow-y: auto; /* Enable vertical scrolling */
     border: 1px solid #ddd; /* Optional: Add a border around the scrollable area */
-  }
+    }
+      #leaderboardPanel {
+      position: fixed;
+      top: 80px;
+      right: -260px;
+      width: 260px;
+      height: 300px;
+      background-color: #f9f9f9;
+      border-left: 2px solid #ccc;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+      overflow-y: auto;
+      transition: right 0.3s ease;
+      z-index: 1000;
+      padding: 10px;
+    }
+
+    #leaderboardPanel.open {
+      right: 0;
+    }
+
+    #toggleArrow {
+    position: fixed;
+    top: 90px;
+    right: 0;
+    width: 120px;
+    height: 40px;
+    background-color: #007bff;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    cursor: pointer;
+    z-index: 1001;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    }
+    #toggleArrow:hover {
+      background-color: #0056b3;
+    }
+    #toggleText {
+      flex-grow: 1;
+    }
+    #toggleIcon {
+      font-size: 18px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1 class="my-4">Chat AI Compiler</h1>
     <p>Select AI services, type a question, and get responses.</p>
-    <div class="scrollable-table">
-    <table class="table table-bordered" style="height: 100px; width: auto">
-      <thead>
-        <tr>
-          <th>AI Leaderboard</th>
-          <th>Running Score</th>
-        </tr>
-      </thead>
-      <tbody id="table-body">
-      </tbody>
-    </table>
+    <!-- Toggle Button -->
+    <div id="toggleArrow">
+      <span id="toggleText">Leaderboard</span>
+      <span id="toggleIcon">&#9664;</span>
+    </div>
+
+    <!-- Slide-Out Leaderboard Panel -->
+    <div id="leaderboardPanel">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>AI Leaderboard</th>
+            <th>Running Score</th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+        </tbody>
+      </table>
     </div>
     <form id="chatForm" class="mb-4">
       <div class="form-group">
@@ -284,6 +340,15 @@
     });
     
   </script>
-
+  <script>
+    const panel = document.getElementById('leaderboardPanel');
+    const toggle = document.getElementById('toggleArrow');
+  
+    toggle.addEventListener('click', () => {
+    panel.classList.toggle('open');
+    const icon = document.getElementById('toggleIcon');
+    icon.innerHTML = panel.classList.contains('open') ? '&#9654;' : '&#9664;';
+    });
+  </script> 
 </body>
 </html>
