--- a/web/public/login.html
+++ b/web/public/login.html
@@ -12,5 +12,6 @@
     <button type="submit">Login</button>
   </form>
   <p>Don't have an account? <a href="/register.html">Register</a></p>
+  <p>Don't want an account? <a href="/">Go Home</a></p>
 </body>
 </html>
