--- a/web/public/register.html
+++ b/web/public/register.html
@@ -12,5 +12,6 @@
     <button type="submit">Register</button>
   </form>
   <p>Already have an account? <a href="/login.html">Login</a></p>
+  <p>Don't want an account? <a href="/">Go Home</a></p>
 </body>
 </html>
