added annotations for which AI to use for what purpose

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -84,6 +84,11 @@
     #toggleIcon {
       font-size: 18px;
     }
+    .use-case {
+    font-size: 0.8rem;
+    color: #6c757d;
+    font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -114,6 +119,9 @@
     <form id="chatForm" class="mb-4">
       <div class="form-group">
         <label>Select AI Services:</label>
+        <label>Best model for coding: deepseek-r1-distill-llama-70b</label>
+        <label>Best model for reasoning: mistral-saba-24b</label>
+        <label>Best model for general purpose: llama3-70b-8192</label>
         <div class="mb-2">
           <button id="selectAll" type="button" class="btn btn-sm btn-outline-primary">Select All</button>
           <button id="deselectAll" type="button" class="btn btn-sm btn-outline-secondary">Deselect All</button>
@@ -124,9 +132,9 @@
           <label><input type="checkbox" name="aiServices" value="qwen-qwq-32b"> qwen-qwq-32b</label>
           <label><input type="checkbox" name="aiServices" value="llama3-8b-8192"> llama3-8b-8192</label>
           <label><input type="checkbox" name="aiServices" value="gemma2-9b-it"> gemma2-9b-it</label>
-          <label><input type="checkbox" name="aiServices" value="deepseek-r1-distill-llama-70b"> deepseek-r1-distill-llama-70b</label>
-          <label><input type="checkbox" name="aiServices" value="llama3-70b-8192"> llama3-70b-8192</label>
-          <label><input type="checkbox" name="aiServices" value="mistral-saba-24b"> mistral-saba-24b</label>
+          <label><input type="checkbox" name="aiServices" value="deepseek-r1-distill-llama-70b"> deepseek-r1-distill-llama-70b<span class="use-case">Best for Coding</span></label>
+          <label><input type="checkbox" name="aiServices" value="llama3-70b-8192"> llama3-70b-8192<span class="use-case">Best for General Purpose</span></label>
+          <label><input type="checkbox" name="aiServices" value="mistral-saba-24b"> mistral-saba-24b<span class="use-case">Best for Reasoning</span></label>
           <label><input type="checkbox" name="aiServices" value="compound-beta"> compound-beta</label>
           <label><input type="checkbox" name="aiServices" value="llama-3.1-8b-instant"> llama-3.1-8b-instant</label>
           <label><input type="checkbox" name="aiServices" value="llama-3.3-70b-versatile"> llama-3.3-70b-versatile</label>
