--- a/web/public/index.html
+++ b/web/public/index.html
@@ -90,20 +90,26 @@
     font-style: italic;
     }
     body.logo {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh; /* Ensures the body is at least the full viewport height */
-    background-image: url('./logos/whitelogo2.jpg'); /* Path to the 1920x1080 image */
-    background-size: cover; /* Scales the image to cover the entire window */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed; /* Optional: Keeps the background fixed while scrolling */
+    .logo {
+    font-size: 24px;               /* Font size for the logo */
+    font-weight: bold;            /* Makes the text bold */
+    color: #FFFFFF;               /* White text color */
+    background-color: #555555;    /* Blue background */
+    padding: 10px 20px;           /* Space around the text */
+    border-radius: 8px;           /* Rounded corners */
+    position: fixed;              /* Fixed in top-left corner */
+    top: 10px;
+    left: 10px;
+    z-index: 1000;                /* On top of other elements */
+    font-family: Arial, sans-serif;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 <body class="logo">
+  <div class="logo">ChatAIComp</div>
   <div class="container">
-    <h1 class="my-4">Chat AI Compiler</h1>
+
     <p id="username"></p>
     <div id="auth-buttons" style="margin-bottom: 20px;"></div>
     <p>Select AI services, type a question, and get responses.</p>
