--- a/web/public/index.html
+++ b/web/public/index.html
@@ -532,6 +532,7 @@ function openTagEditor(model, chatId, responseId) {
     themeToggleBtn.addEventListener("click", () => {
       const currentTheme = document.body.classList.contains("dark-mode") ? "dark" : "light";
       const newTheme = currentTheme === "dark" ? "light" : "dark";
+      document.body.style.backgroundImage = 'none';
 
       document.body.classList.remove(currentTheme + "-mode");
       document.body.classList.add(newTheme + "-mode");
@@ -539,7 +540,7 @@ function openTagEditor(model, chatId, responseId) {
     });
     function resetTheme() {
     document.body.style.backgroundImage = "url('/logos/whitelogo.jpg')"; // Clear background image on body
-    document.querySelectorAll('.content').forEach(el => {
+      document.querySelectorAll('.content').forEach(el => {
       el.style.backgroundImage = 'none'; // Clear background image on .content elements
     });
     }
