--- a/web/public/dashboard.html
+++ b/web/public/dashboard.html
@@ -18,6 +18,7 @@
     <h2>Your Chat History</h2>
     <button id="downloadHistory" class="btn btn-success" style="margin-bottom: 20px;">Download Chat History</button>
     <button id="printHistory" class="btn btn-info" style="margin-left: 10px; margin-bottom: 20px;">Print Chat History</button>
+    <button id="searchHistory" class="btn btn-info" style="margin-left: 10px; margin-bottom: 20px;" onclick="window.location.href='/searchpage.html'">Search History</button>
     <p id="username"></p>
     <div id="chat-history"></div>
 
